<resources>
    <string name="app_name">Weather</string>
    <string-array name="city_names">
        <item>Belo Oriente</item>
        <item>Lisbon</item>
        <item>Madrid</item>
        <item>Paris</item>
        <item>Berlin</item>
        <item>Copenhagen</item>
        <item>Rome</item>
        <item>London</item>
        <item>Dublin</item>
        <item>Prague</item>
        <item>Vienna</item>
    </string-array>
    <string-array name="city_id" translatable="false">
        <item>3470117</item>
        <item>2267056</item>
        <item>3117735</item>
        <item>2988506</item>
        <item>2950158</item>
        <item>2618424</item>
        <item>3169071</item>
        <item>2643743</item>
        <item>2964574</item>
        <item>3067696</item>
        <item>2761369</item>
    </string-array>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="settings">Settings</string>
    <string name="header_user" translatable="false">Gleick Pereira</string>
    <string name="header_email" translatable="false">gleickcp@gmail.com</string>
    <string name="app">APP</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="volume">Volume of weather effects</string>
    <string name="ok">OK</string>
    <string name="select_city">Select a city</string>
    <string name="weather_icon">Weather icon</string>
    <string name="weather_data">Weather data</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
</resources>